<resources>
    <string name="app_name">florelle</string>
    <string name="headerTitle">livraison des fleurs instantannées</string>
    <string name="suivi">Suivi de livraison</string>
    <string name="contact">Contactez-nous</string>
    <string name="lang">English/Francais</string>
    <string name="apropos">a propos de florelle</string>
    <string name="services">Nos services</string>
    <string name="serviceC">Service client</string>
    <string name="AvisC">Avis client</string>
    <string name="aide">besoins d\'aide ? </string>
    <string name="connect">Mon compte</string>
    <string name="insc">inscrirption </string>
    <string name="l1">Du lundi au vendredi de 9h a 18h</string>
    <string name="l2">Contactez-nous</string>
    <string name="l3">Livraison des fleurs en Tunisie</string>
    <string name="collection_des_boutiques">Collection des boutiques</string>
    <string name="msg">florella realise fidelement le bouquet que vous avez choisiet livre vos fleurs en 4h en Tunisie et en 24h partout en Tunisie</string>
    <string name="l5">Le samedi de 10h à 14h.</string>
    <string name="l6">Fermé le dimanche et jours fériés</string>
    <string name="l7">Besoin de précisions ? </string>
    <string name="l8">Par courrier :</string>
    <string name="l9">Florella.com</string>
    <string name="l10">15 rue Lucien ennaser2</string>
    <string name="l11">Par téléphone :</string>
    <string name="l12">Pour toute question :</string>
    <string name="l13">Pour toute question :</string>
    <string name="l14">Par e-mail : florella@com</string>
    <string name="nom">Florella</string>
    <string name="suivi_de_votre_commande">Suivi de votre commande</string>
    <string name="mm">Suivez votre commande et visualisez la photo du bouquet que vous avez commandé. L\'option de visualisation de la photo n\'est pas disponible pour les commandes réalisées par 123fleurs. Entrez votre adresse e-mail et votre référence de commande</string>
    <string name="email">saisir votre adresse mail</string>
    <string name="ref">Entrer la reference de la commande</string>
    <string name="qst">Référence de commande oubliée ?</string>
    <string name="emaill">Email</string>
    <string name="r_f_rence_de_commande">Référence de commande</string>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="je_m_inscris">Je m\'inscris</string>
    <string name="simple_et_gratuit_vous_cumulez_des_r_ductions_avec_tous_vos_achats">SIMPLE et GRATUIT, vous cumulez des réductions avec tous vos achats!</string>
    <string name="nom1">Nom</string>
    <string name="saisir_votre_nom">Saisir votre nom</string>
    <string name="prenom">Prenom</string>
    <string name="saisir_votre_prenom">Saisir votre prenom</string>
    <string name="telephone">Telephone</string>
    <string name="saisir_votre_telephone">Saisir votre Telephone</string>
    <string name="emailll">Email</string>
    <string name="saisir_votre_email">Saisir votre Email</string>
    <string name="choisissez_un_mot_de_passe_4_caract_res_minimum">Choisissez un mot de passe (4 caractères minimum)</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="saisir_votre_mot_de_passe">Saisir votre mot de passe</string>
    <string name="confirmez_votre_mot_de_passe">Confirmez votre mot de passe :</string>
    <string name="confirmer_votre_mot_de_passe">Confirmer Votre mot de passe</string>
    <string name="inscrire">inscrire</string>
    <string name="verife">saisir votre mot de passe</string>
    <string name="cnx">Se connecter</string>
    <string name="mdp">mot de passe oublier?</string>
    <string name="cnxx">connexion</string>
    <string name="cpt">Crée un compte</string>
    <string name="bienvenu">Bienvenu!</string>
    <string name="continuer">continuer</string>
    <string name="form">Acceder au formulaire</string>
    <string name="l17">par telephone : 0806 23 11 11 (prix d\'un appel local)</string>
</resources>
