<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:gravity="center"
        android:text="@string/collection_des_boutiques"
        android:textColor="@color/bleu" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"
        android:text="@string/l3"
        android:textColor="@color/bb"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:text="@string/l2"
        android:textColor="@color/b"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/l5"
        android:textColor="@color/b"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:text="@string/l6"
        android:textColor="@color/b"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/l7"
        android:textColor="@color/b"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:text="Consulter les questions fréquentes."
        android:textColor="@color/b"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:text="@string/l8"
        android:textColor="@color/b"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/l9"
        android:textColor="@color/b"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/l10"
        android:textColor="@color/b"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/l17"
        android:textColor="@color/b"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:text="@string/l14"
        android:textColor="@color/b"/>


</LinearLayout>