<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/cnx"
        android:textColor="@color/pink"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:text="@string/emaill"
            android:textColor="@color/b" />

        <EditText
            android:id="@+id/email"
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:hint="@string/email" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:text="@string/mot_de_passe"
            android:textColor="@color/b" />

        <EditText
            android:id="@+id/mdp"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:hint="@string/verife" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:autoLink="all"
        android:gravity="center"
        android:text="@string/mdp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:text="@string/cnxx" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:text="@string/cpt"
        android:textColor="@color/b"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:text="@string/bienvenu"
            android:textColor="@color/b" />

        <Button
            android:id="@+id/button2"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/continuer"
            android:textColor="@color/wh" />
    </LinearLayout>
</LinearLayout>