<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:gravity="center"
        android:text="@string/nom"
        android:textColor="@color/pink"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/suivi_de_votre_commande"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:text="@string/mm" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="91dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:text="@string/emaill" />

        <EditText
            android:id="@+id/e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="92dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:text="@string/r_f_rence_de_commande" />

        <EditText
            android:id="@+id/ref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ref" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:text="@string/qst"
        />

    <Button
        android:id="@+id/valide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/bleu"
        android:text="valider"
        android:textColor="@color/wh" />

</LinearLayout>





